fix badge wrapping

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -194,6 +194,7 @@ footer {
 .badges {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 0.7rem;
   background: var(--box);
   backdrop-filter: blur(10px);
@@ -203,6 +204,7 @@ footer {
   margin-bottom: 1em;
   border-bottom: 1px dashed rgba(255, 77, 148, 0.3);
   padding-bottom: 3rem;
+  max-width: 100%;
 }
 
 .badges::before {
